force-app/main/default/objects/Preference_Option__c/fields/AutoNum__c.field-meta.xml
<CustomField>
    <fullName>AutoNum__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>AutoNum</label>
    <type>AutoNumber</type>
</CustomField>