force-app/main/default/objects/Preference_Option__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Preference Options</relationshipLabel>
    <relationshipName>Preference_Options</relationshipName>
    <type>Lookup</type>
</CustomField>