force-app/main/default/objects/Preference_Option__c/fields/Dealbreaker__c.field-meta.xml
<CustomField>
    <fullName>Dealbreaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealbreaker</label>
    <type>Checkbox</type>
</CustomField>