force-app/main/default/objects/Preference_Option__c/fields/PO_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>