force-app/main/default/objects/Preference_Option__c/fields/Preference_Option__c.field-meta.xml
<CustomField>
    <fullName>Preference_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference Option</label>
    <referenceTo>Preference_Option__c</referenceTo>
    <relationshipLabel>Preference Options</relationshipLabel>
    <relationshipName>Preference_Options</relationshipName>
    <type>Lookup</type>
</CustomField>