force-app/main/default/objects/Preference_Option__c/fields/Strict_Match__c.field-meta.xml
<CustomField>
    <fullName>Strict_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strict Match</label>
    <type>Checkbox</type>
</CustomField>